[project]
name = "python-template"  # TODO change this
version = "0.1.0"
description = "Python project template by niqzart"  # TODO change this
authors = [  # TODO change this
    {name = "niqzart", email = "niqzart@yandex.ru"},
]
readme = "README.md"
requires-python = "~=3.13,<4.0"
dynamic = ["dependencies"]

[build-system]
requires = ["poetry-core==2.1.3"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry]  # TODO add this if you are not writing a library
# package-mode = false

[tool.poetry.dependencies]
# TODO add your production dependensies here

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
# TODO you can add pytest plugins & test dependencies here

[tool.poetry.group.dev.dependencies]
flake8 = "7.0.0"
black = "25.1.0"
isort = "6.0.1"
autoflake = "2.3.1"
pre-commit = "^3.2.1"
mypy = "^1.12.0"
flake8-pie = "0.16.0"
dlint = "0.14.0"
flake8-coding = "1.3.2"
flake8-secure-coding-standard = "1.4.1"
flake8-unused-arguments = "0.0.13"
flake8-pytest-style = "1.7.2"
flake8-useless-assert = "0.4.4"
flake8-simplify = "0.19.3"
flake8-future-import = "0.4.7"
flake8-functions-names = "0.4.0"
flake8-variables-names = "0.0.5"
flake8-comments = "0.1.2"
flake8-annotations = "2.9.1"
flake8-new-union-types = "0.4.1"
flake8-pep585 = "0.1.7"
flake8-type-checking = "2.3.1"
flake8-print = "5.0.0"
flake8-use-fstring = "1.4"
flake8-use-pathlib = "0.3.0"
flake8-test-name = "^0.1.5"
wemake-python-styleguide = "0.18.0"

[tool.poetry.group.types.dependencies]
# TODO you can add dedicated type-stubs here

[tool.isort]
profile = "black"
py_version = 313
combine_as_imports = true
known_first_party = ["app", "tests"]
no_lines_before = "LOCALFOLDER"
reverse_relative = true
line_length = 88

[tool.mypy]
strict = true
warn_unreachable = true
warn_redundant_casts = true
# TODO you can add mypy plugins here
